compiler/typ/tests/fixtures/diagnostics/0915_gadt_packed_branch_result_mismatch_06.ml.infer.expected
File "0915_gadt_packed_branch_result_mismatch_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0915_gadt_packed_branch_result_mismatch_06 is not a valid module name.

File "0915_gadt_packed_branch_result_mismatch_06.ml", line 9, characters 31-32:
9 |   | Pack_zeta (Bool_zeta b) -> b
                                   ^
Error: The value b has type bool but an expression was expected of type int
